test/functions/vass/proc-iter/error-return-expr-in-iter-1.good
error-return-expr-in-iter-1.chpl:3: error: 'return' statements with values are not allowed in iterators
error-return-expr-in-iter-1.chpl:1: note: inside 'i11f', which is declared as an iterator here
