test/functions/vass/proc-iter/error-return-expr-in-iter-1.chpl
iter i11f() {
  yield "11f-1.";
  return "11f-2.";
}
for i in i11f() do write(i);
